# rish

./: .env  Cargo.toml  rish.sqlite
migrations/: 20230719022157_epoch_slot.down.sql  20230719022157_epoch_slot.up.sql
src/: main.rs
src/db_ops/: db_ops.rs  mod.rs
src/dtos/: dtos.rs  mod.rs
src/models/: models.rs
src/utils/: external_api.rs  mod.rs  scheduler.rs
