[package]
name = "rish"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
once_cell = "1.18.0"
# dotenvy = "0.15.7"
# libsqlite3-sys = "0.26.0"
reqwest = { version = "0.11.18", features = ["json", "blocking"] }
salvo = "0.47.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.103"
sqlx = { git = "https://github.com/rootkill-g/sqlx.git", features = ["sqlite", "runtime-tokio"] }
# sqlx-cli = "0.7.1"
tokio = { version = "1.29.1", features = ["full"] }
tracing-subscriber = "0.3.17"

